k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: aadhi-bhairava-cow-farm
  labels:
    name: aadhi-bhairava-cow-farm
    environment: production
