k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: aadhi-bhairava-cow-farm
spec:
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: postgres
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: aadhi-bhairava-cow-farm
spec:
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: 5000
  selector:
    app: backend
---
apiVersion: v1
kind: Service
metadata:
  name: web-service
  namespace: aadhi-bhairava-cow-farm
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: web
